traefik-controller.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:alpine
        args: ["--kubernetes", "--etcd.endpoint=etcd-cluster.etcd-operator:2379", "--etcd.useAPIV3=true", "--etcd.prefix=/traefik"]
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cattle
  name: cattle-service-lb
  namespace: cattle-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cattle
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cattle-ingress
  namespace: cattle-system
spec:
  rules:
  - host: rancher.cloud.brjllc.net
    http:
      paths:
      - backend:
          serviceName: cattle-service-lb
          servicePort: 80
